# gestures-kde

./: CMakeLists.txt  COPYRIGHT  config.h.cmake
src/: CMakeLists.txt  Gestures.cpp  Gestures.h  Main.cpp  gestures.desktop
src/actions/factory/: ActionFactory.h
src/actions/implementation/: Action.h  ChangeDesktop.h  ChangeViewport.h  CloseWindow.h  DragAndDrop.h  MaximizeRestoreWindow.h  MinimizeWindow.h  MouseClick.h  MoveWindow.h  ResizeWindow.h  RunCommand.h  Scroll.h  SendKeys.h  ShowDesktop.h
src/actions/types/: ActionTypeEnum.h
src/config/: Config.cpp  Config.h
src/gestures/collector/: GestureCollector.h
src/gestures/factory/: GestureFactory.h
src/gestures/handler/: GestureHandler.h
src/gestures/implementation/: Gesture.h
src/gestures/types/: GestureDirectionEnum.h  GestureTypeEnum.h
src/windows/: WindowListener.cpp  WindowListener.h
